--- a/index.html
+++ b/index.html
@@ -1,40 +1,89 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Smart Event Portal</title>
+<title>College Smart Event Portal</title>
+
+<script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
+
 <style>
 body {
   font-family: Arial;
   text-align: center;
-  background-color: #f2f2f2;
+  background: linear-gradient(to right, #4facfe, #00f2fe);
+  color: black;
 }
+
 .event-box {
   background: white;
-  padding: 20px;
-  margin: 20px;
-  border-radius: 10px;
+  padding: 25px;
+  margin: 40px auto;
+  width: 350px;
+  border-radius: 15px;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.2);
 }
+
 button {
-  padding: 10px;
+  padding: 10px 20px;
   background: blue;
   color: white;
   border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button:hover {
+  background: darkblue;
+}
+
+#qrcode {
+  margin-top: 20px;
 }
 </style>
 </head>
+
 <body>
 
 <h1>College Smart Event Portal</h1>
 
 <div class="event-box">
   <h2>AI Workshop 2026</h2>
-  <p>Date: March 10, 2026</p>
-  <p>Venue: Seminar Hall</p>
+  <p><b>Date:</b> March 10, 2026</p>
+  <p><b>Venue:</b> Seminar Hall</p>
 
-  <a href="https://forms.gle/uGW78qo9YdVw8q589">
+  <a href="https://forms.gle/uGW78qo9YdVw8q589" target="_blank">
     <button>Register Now</button>
   </a>
+
+  <br><br>
+
+  <button onclick="generateQR()">Generate Registration QR</button>
+
+  <div id="qrcode"></div>
+
+  <br>
+
+  <button onclick="markAttendance()">Mark Attendance</button>
+
+  <p id="attendanceMsg"></p>
 </div>
+
+<script>
+function generateQR() {
+  const qrDiv = document.getElementById("qrcode");
+  qrDiv.innerHTML = "";
+
+  QRCode.toCanvas("https://forms.gle/uGW78qo9YdVw8q589", { width: 200 }, function (error, canvas) {
+    if (error) console.error(error);
+    qrDiv.appendChild(canvas);
+  });
+}
+
+function markAttendance() {
+  const today = new Date().toLocaleString();
+  document.getElementById("attendanceMsg").innerHTML =
+    "Attendance Marked Successfully ✅ <br> Time: " + today;
+}
+</script>
 
 </body>
 </html>
