--- a/index.html
+++ b/index.html
@@ -6,37 +6,27 @@
 <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
 
 <style>
-body {
+body{
   font-family: Arial;
-  text-align: center;
-  background: linear-gradient(to right, #4facfe, #00f2fe);
-  color: black;
+  text-align:center;
+  background: linear-gradient(to right,#4facfe,#00f2fe);
 }
 
-.event-box {
-  background: white;
-  padding: 25px;
-  margin: 40px auto;
-  width: 350px;
-  border-radius: 15px;
-  box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+.event-box{
+  background:white;
+  padding:25px;
+  margin:40px auto;
+  width:350px;
+  border-radius:15px;
 }
 
-button {
-  padding: 10px 20px;
-  background: blue;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-button:hover {
-  background: darkblue;
-}
-
-#qrcode {
-  margin-top: 20px;
+button{
+  padding:10px 20px;
+  background:blue;
+  color:white;
+  border:none;
+  border-radius:5px;
+  cursor:pointer;
 }
 </style>
 </head>
@@ -46,42 +36,25 @@ button:hover {
 <h1>College Smart Event Portal</h1>
 
 <div class="event-box">
-  <h2>AI Workshop 2026</h2>
-  <p><b>Date:</b> March 10, 2026</p>
-  <p><b>Venue:</b> Seminar Hall</p>
+<h2>AI Workshop 2026</h2>
+<p>Date: March 10, 2026</p>
+<p>Venue: Seminar Hall</p>
 
-  <a href="https://forms.gle/uGW78qo9YdVw8q589" target="_blank">
-    <button>Register Now</button>
-  </a>
+<button onclick="generateQR()">Generate QR</button>
+<div id="qrcode"></div>
 
-  <br><br>
-
-  <button onclick="generateQR()">Generate Registration QR</button>
-
-  <div id="qrcode"></div>
-
-  <br>
-
-  <button onclick="markAttendance()">Mark Attendance</button>
-
-  <p id="attendanceMsg"></p>
 </div>
 
 <script>
-function generateQR() {
+function generateQR(){
   const qrDiv = document.getElementById("qrcode");
-  qrDiv.innerHTML = "";
+  qrDiv.innerHTML="";
 
-  QRCode.toCanvas("https://forms.gle/uGW78qo9YdVw8q589", { width: 200 }, function (error, canvas) {
-    if (error) console.error(error);
+  const url = "attendance.html?name=Student&id=101";
+
+  QRCode.toCanvas(url,{width:200},function(error,canvas){
     qrDiv.appendChild(canvas);
   });
-}
-
-function markAttendance() {
-  const today = new Date().toLocaleString();
-  document.getElementById("attendanceMsg").innerHTML =
-    "Attendance Marked Successfully ✅ <br> Time: " + today;
 }
 </script>
 
