--- a/index.html
+++ b/index.html
@@ -1,74 +1,87 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>AI Workshop 2026 - Registration</title>
+<title>College Smart Event Portal</title>
+
+<script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
 
 <style>
-body{
+body {
   font-family: Arial;
-  text-align:center;
-  background: linear-gradient(to right,#4facfe,#00f2fe);
+  text-align: center;
+  background: linear-gradient(to right, #4facfe, #00f2fe);
+  color: black;
 }
 
-.box{
-  background:white;
-  padding:25px;
-  margin:80px auto;
-  width:350px;
-  border-radius:15px;
+.event-box {
+  background: white;
+  padding: 25px;
+  margin: 40px auto;
+  width: 350px;
+  border-radius: 15px;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.2);
 }
 
-input{
-  width:90%;
-  padding:8px;
-  margin:5px;
+button {
+  padding: 10px 20px;
+  background: blue;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
-button{
-  padding:10px 20px;
-  background:blue;
-  color:white;
-  border:none;
-  border-radius:5px;
-  cursor:pointer;
+button:hover {
+  background: darkblue;
+}
+
+#qrcode {
+  margin-top: 20px;
 }
 </style>
 </head>
 
 <body>
 
-<h1>AI Workshop 2026</h1>
+<h1>College Smart Event Portal</h1>
 
-<div class="box">
-<h3>Student Registration</h3>
+<div class="event-box">
+  <h2>AI Workshop 2026</h2>
+  <p><b>Date:</b> March 10, 2026</p>
+  <p><b>Venue:</b> Seminar Hall</p>
 
-<input type="text" id="name" placeholder="Enter Name"><br>
-<input type="text" id="id" placeholder="Enter ID"><br><br>
+  <a href="https://forms.gle/uGW78qo9YdVw8q589" target="_blank">
+    <button>Register Now</button>
+  </a>
 
-<button onclick="register()">Register</button>
+  <br><br>
 
-<p id="msg"></p>
+  <button onclick="generateQR()">Generate Registration QR</button>
+
+  <div id="qrcode"></div>
+
+  <br>
+
+  <button onclick="markAttendance()">Mark Attendance</button>
+
+  <p id="attendanceMsg"></p>
 </div>
 
 <script>
-function register(){
+function generateQR() {
+  const qrDiv = document.getElementById("qrcode");
+  qrDiv.innerHTML = "";
 
-  const name = document.getElementById("name").value;
-  const id = document.getElementById("id").value;
+  QRCode.toCanvas("https://forms.gle/uGW78qo9YdVw8q589", { width: 200 }, function (error, canvas) {
+    if (error) console.error(error);
+    qrDiv.appendChild(canvas);
+  });
+}
 
-  if(name=="" || id==""){
-    alert("Fill all details");
-    return;
-  }
-
-  localStorage.setItem("studentName",name);
-  localStorage.setItem("studentID",id);
-
-  document.getElementById("msg").innerHTML="Registration Successful ✅";
-
-  setTimeout(()=>{
-    window.location="attendance.html";
-  },1500);
+function markAttendance() {
+  const today = new Date().toLocaleString();
+  document.getElementById("attendanceMsg").innerHTML =
+    "Attendance Marked Successfully ✅ <br> Time: " + today;
 }
 </script>
 
